--- a/app/src/main/res/menu/main_activity.xml
+++ b/app/src/main/res/menu/main_activity.xml
@@ -6,6 +6,8 @@
         android:id="@+id/menu_about"
         android:checkable="false"
         android:enabled="true"
+        android:menuCategory="secondary"
+        android:orderInCategory="2"
         android:title="@string/about"
         android:visible="true"
         app:showAsAction="never"/>
