--- a/app/src/main/res/layout-land/frament_movie_detail.xml
+++ b/app/src/main/res/layout-land/frament_movie_detail.xml
@@ -56,7 +56,8 @@
                 android:layout_height="278dp"
                 android:adjustViewBounds="true"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent"
+                android:contentDescription="@string/movie_poster"/>
 
             <TextView
                 android:id="@+id/releaseDateLabel"
