--- a/app/src/main/res/layout/frament_movie_detail.xml
+++ b/app/src/main/res/layout/frament_movie_detail.xml
@@ -61,7 +61,8 @@
                 android:layout_marginTop="8dp"
                 android:adjustViewBounds="true"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/title"/>
+                app:layout_constraintTop_toBottomOf="@+id/title"
+                android:contentDescription="@string/movie_poster"/>
 
             <LinearLayout
                 android:id="@+id/releaseDateLayout"
