--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,8 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#ff4081</color>
+    <color name="transparent">#00000000</color>
+    <color name="evenReviewBackground">#d6e7ef</color>
+    <color name="oddReviewBackground">#e9e9e9</color>
 </resources>
