--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -65,16 +65,31 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/title"/>
 
+            <ImageView
+                android:id="@+id/favorite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/btn_small"
+                app:layout_constraintBottom_toTopOf="@+id/releaseDateLayout"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/poster"
+                app:layout_constraintTop_toTopOf="@+id/poster"
+                app:srcCompat="@drawable/vector_drawable_ic_favorite_outline"/>
+
             <LinearLayout
                 android:id="@+id/releaseDateLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
                 android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:orientation="vertical"
                 app:layout_constraintBottom_toTopOf="@+id/voteAverageLayout"
                 app:layout_constraintStart_toEndOf="@+id/poster"
-                app:layout_constraintTop_toBottomOf="@+id/title">
+                app:layout_constraintTop_toBottomOf="@+id/favorite"
+                android:layout_marginLeft="8dp">
 
                 <TextView
                     android:id="@+id/releaseDateLabel"
@@ -239,6 +254,7 @@
                 app:layout_constraintEnd_toEndOf="@id/overview"
                 app:layout_constraintStart_toStartOf="@id/overviewLabel"
                 app:layout_constraintTop_toBottomOf="@id/trailersLabel"/>
+
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 </FrameLayout>
