--- a/app/src/main/res/menu/movie_list_fragment.xml
+++ b/app/src/main/res/menu/movie_list_fragment.xml
@@ -6,19 +6,26 @@
         android:id="@+id/menu_sortOrder"
         android:title="@string/sort_order"
         app:showAsAction="never">
-        <menu
-            >
+        <menu>
+            <item
+                android:id="@+id/menu_favorites"
+                android:checkable="true"
+                android:menuCategory="secondary"
+                android:orderInCategory="0"
+                android:title="@string/favorites"/>
+            <item
+                android:id="@+id/menu_highestRated"
+                android:checkable="true"
+                android:menuCategory="secondary"
+                android:orderInCategory="1"
+                android:title="@string/highest_rated"/>
             <item
                 android:id="@+id/menu_mostPopular"
                 android:checkable="true"
                 android:menuCategory="secondary"
-                android:orderInCategory="1"
+                android:orderInCategory="2"
                 android:title="@string/most_popular"
                 app:showAsAction="never"/>
-            <item
-                android:id="@+id/menu_highestRated"
-                android:checkable="true"
-                android:title="@string/highest_rated"/>
         </menu>
     </item>
 </menu>
