--- a/app/src/main/res/layout/trailer.xml
+++ b/app/src/main/res/layout/trailer.xml
@@ -11,6 +11,7 @@
         android:layout_width="320dp"
         android:layout_height="180dp"
         android:scaleType="fitXY"
+        android:contentDescription="@string/trailer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,6 +58,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/btn_small"
+        android:contentDescription="@string/watch_trailer"
         app:layout_constraintBottom_toBottomOf="@+id/trailerImage"
         app:layout_constraintEnd_toEndOf="@+id/trailerImage"
         app:layout_constraintStart_toStartOf="@+id/trailerImage"
